style.css
/* ... */
A {text-decoration: none;}
A:hover {text-decoration: underline;}

UL {
    text-align: left;
}


/* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
*             Interactive elements and forms                     *
* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
input,
select {
    color: var(--text-body);
    background: var(--bg-interactive);
    border: none;
}

input[type="text"],
input[type="number"],
input[type="search"]
{
    height: 1.75rem;
    padding-left: 0.25rem;
}

input[type="button"],
input[type="submit"] {
    color: var(--text-body);
    background: var(--bg-confirm);
    border-radius: 1.25rem;
    height: 2rem;
    margin: 0.25rem 0;
}

input[type="button"]:hover,
input[type="submit"]:hover {
    cursor: pointer;
    filter: brightness(1.15);
}


textarea {
    color: var(--text-body);
    background: var(--bg-body);
}

/* Override autcomplete theming */
.autocomplete_completions {
    border: 2px solid var(--hl-2);
    color: var(--text-body);
    background: var(--bg-body);
    padding: 5px;
    text-align: left;
    font-size: var(--base-font-size);
}
.autocomplete_completions li {
    padding: 0.4rem;
}
.autocomplete_completions .selected {
    background-color: var(--bg-confirm);
    color: var(--text-body);
}

input:-webkit-autofill,
input:-webkit-autofill:hover,
input:-webkit-autofill:focus,
textarea:-webkit-autofill,
textarea:-webkit-autofill:hover,
textarea:-webkit-autofill:focus,
select:-webkit-autofill,
select:-webkit-autofill:hover,
select:-webkit-autofill:focus {
  border: 1px solid green;
  -webkit-text-fill-color: green;
  -webkit-box-shadow: 0 0 0px 1000px #000 inset;
  transition: background-color 5000s ease-in-out 0s;
}


/* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
*             The navigation bar, and all its blocks             *
* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
nav {
    display: flex;
    flex-direction: column;
    gap: 0.5rem;
    position: absolute;
    top: 0;
    left: 0;
    width: var(--left-nav-width);
    padding: 0.5rem;
}

nav section h3 {
    background: var(--bg-heading);
    color: var(--text-heading);
    margin: 0;
}

nav section h3:first-of-type {
    border: none;
    margin: 0;
    margin-bottom: 0;
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
    box-shadow: none;
}

nav section > .blockbody {
    text-align: center;
    margin: 0;
    border: 4px solid var(--bg-heading);
    border-top: none;
    border-top-left-radius: 0;
    border-top-right-radius: 0;
    box-shadow: none;
}

nav input {
    width: 100%;
}

nav select {
    width: 100%;
    padding: 0;
}

nav .comment {
    background: var(--bg-body);
}

table.image_info {
  border-collapse: collapse
}

table.image_info td,th {
  border-collapse: collapse;
  border: 1px solid black;
  padding: 0.25rem
}

table.image_info td:nth-of-type(2) {
  display: none
}

table.image_info tr:last-of-type td {
  border: none;
}

.more:after {
    content: " >>>";
}

.tag_count:before {
    content: "(";
}
.tag_count:after {
    content: ")";
}

#paginator .blockbody {
    background: none;
    border: none;
    box-shadow: none;
}

/* ----------------------- */
/* Related Tags formatting */
/* ----------------------- */
.tag_list {
    width: 100%;
}

.tag_list thead tr > th {
    border: none;
}

.tag_list tr {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    border: none;
}

.tag_list tr,
.tag_list th,
.tag_list td {
    border: none !important;
}

.tag_list td, th {
    padding: 0.15rem 0.5rem;
}

.tag_list tr td:nth-of-type(2) {
    overflow-wrap: anywhere;
}

.tag_list tbody tr:nth-of-type(odd) {
    background: var(--bg-body);
    filter: brightness(0.95);
    @media (prefers-color-scheme: dark) {
        filter: brightness(1.2);
    }
}

.image_info th {
    color: #413b3b;
    color: var(--text-body);
}

.image_info tbody tr:last-of-type {
    padding: 0;
    border: none;
}

.image_info tbody tr:last-of-type input {
    margin-top: 10px;
}


/* ----------------------- */
/* Misc .blockbody styles  */
/* ----------------------- */
.blockbody {
    color: var(--text-body);
    background: var(--bg-body) !important;
    padding: 0.5rem 0.25rem;
}

.blockbody table {
    background: var(--bg-main);
}

.blockbody table td,
.blockbody table tr,
.blockbody table th {
    border: 2px solid var(--bg-heading);
}


/* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
*                 the main part of each page                     *
* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */

ARTICLE {
    text-align: center;
    height: 1%;
}

ARTICLE TABLE {
    margin: auto;
}


/* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
*                     specific page types                        *
* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */

#short-wiki-description > .blockbody {
    padding-bottom: 15px;
}
#short-wiki-description h2 {
    margin: 0 0 0.4em;
}

#pagelist {
    margin-top: 32px;
}

#image-list .blockbody {
    margin: 0;
}

.shm-image-list {
    display: flex;
    flex-wrap: wrap;
    gap: 1rem;
    justify-content: center;
}

.shm-image-list .thumb,
.thumb {
    width: 226px;
    display: inline-block;
    zoom: 1; /* ie6 */
    display: inline; /* ie6 */
    text-align: center;
    margin: 1rem 0;
}
.thumb IMG {
    background: var(--bg-main);
    border-radius: 12px; /* standard, webkit, opera */
    -moz-border-radius: 12px; /* mozilla haven't committed yet */
    box-shadow: 2px 2px 6px rgba(0,0,0,0.6); /* standard, opera */
    -webkit-box-shadow: 2px 2px 6px rgba(0,0,0,0.6); /* webkit haven't committed yet */
    -moz-box-shadow: 2px 2px 6px rgba(0,0,0,0.6); /* mozilla haven't committed yet */
}

.thumb IMG[title ~= "meta:animated"] {
  border: blue;
  border-style: solid;
  border-width: 0.25em;
}
/* ... */

